--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
       <div class="row team">
         <div class="col-md-3">
           <div class="member">
-            <img src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== data-gif="img/spencer.gif" width="310" height="407" alt="Spencer Markowski" title="Spencer Markowski">
+            <img src="img/spencer.png" data-gif="img/spencer.gif" width="310" height="407" alt="Spencer Markowski" title="Spencer Markowski">
           </div>
           <h4>Spencer Markowski <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== data-gif="img/iouri.gif" width="310" height="407" alt="Iouri Kostine" title="Iouri Kostine">
+            <img src="img/iouri.png" data-gif="img/iouri.gif" width="310" height="407" alt="Iouri Kostine" title="Iouri Kostine">
           </div>
           <h4>Iouri Kostine <small>Partner</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== data-gif="img/tomko.gif" width="310" height="407" alt="Michael Tomko" title="Michael Tomko">
+            <img src="img/tomko.png" data-gif="img/tomko.gif" width="310" height="407" alt="Michael Tomko" title="Michael Tomko">
           </div>
           <h4>Michael Tomko <small>Production Director</small> <span class="residence"><i class="fa fa-map-marker"></i> STL</span></h4>
         </div>
         <div class="col-md-3">
           <div class="member">
-            <img src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== data-gif="img/jason.gif" width="310" height="407" alt="Jason Luebke" title="Jason Luebke">
+            <img src="img/jason.png" data-gif="img/jason.gif" width="310" height="407" alt="Jason Luebke" title="Jason Luebke">
           </div>
           <h4>Jason Luebke <small>UX / JavaScript</small> <span class="residence"><i class="fa fa-map-marker"></i> IND</span></h4>
         </div>
