--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:description" content="The Able Few provides technology consulting in Ruby on Rails, Storm, and Elasticsearch and specializes in solving complex problems related to consuming, processing, and analyzing large sets of data." />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="330382707086328" />
-  <meta property="og:image" content="img/able-mark-facebook-og-image.png" />
+  <meta property="og:image" content="http://theablefew.github.io/theablefew.com/img/able-mark-facebook-og-image.png" />
   <link type="text/plain" rel="author" href="/humans.txt" />
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
